-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.3.1
-
None
-
Linux, XCB
The Qt::DragLinkCursor does not work on XCB. Qt::DragMoveCursor and Qt::DragCopyCursor do work.
It looks like this: 
To reproduce, you can use my test app for cursors
| For Gerrit Dashboard: QTBUG-39735 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 87753,5 | XCB: Enable loading of the Qt::DragLinkCursor | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 89313,1 | XCB: Fix an off-by-1 bug in cursor loading | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |