XCB: Enable loading of the Qt::DragLinkCursor

It did not load due to an off-by-1 boundary error in a check.
Qt::DragLinkCursor happens to be Qt::LastCursor.

Task-number: QTBUG-39735
Change-Id: Ia7b11fc4eecc4329bd487bd5689c83c986fd2de6
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>
Reviewed-by: Jørgen Lind <jorgen.lind@digia.com>

cregit: 66790d63e914e46bc91818e530be40738f92cfcf https://github.com/qt/qtbase/commit/66790d63e914e46bc91818e530be40738f92cfcf